welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: not found: value estSurBaggle
while (!estSurBaggle) {avance()} 
        ^